fixed footer text alignment

--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -11,7 +11,7 @@ footer {
     display: flex;
     align-items: center;
     li {
-      padding: 2rem 2rem 1rem 2rem;
+      padding: 2rem 1rem 1rem 1rem;
       &:hover {
         border-bottom: 2px solid $white;
       }
@@ -28,6 +28,9 @@ footer {
       color: $white;
       padding: 0 1rem 2rem 0;
       cursor: pointer;
+    }
+    p {
+      text-align: right;
     }
   }
 }
