--- a/public/css/style.css
+++ b/public/css/style.css
@@ -284,7 +284,7 @@ footer .footer-nav ul {
 }
 
 footer .footer-nav ul li {
-  padding: 2rem 2rem 1rem 2rem;
+  padding: 2rem 1rem 1rem 1rem;
 }
 
 footer .footer-nav ul li:hover {
@@ -312,6 +312,10 @@ footer .footer-links i {
   color: white;
   padding: 0 1rem 2rem 0;
   cursor: pointer;
+}
+
+footer .footer-links p {
+  text-align: right;
 }
 
 @media (max-width: 1200px) {
@@ -486,6 +490,9 @@ footer .footer-links i {
   footer .footer-nav ul li {
     padding: 2rem;
   }
+  footer .footer-nav ul li:first-of-type {
+    padding-left: 2rem;
+  }
   footer .footer-links {
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -494,5 +501,8 @@ footer .footer-links i {
   }
   footer .footer-links i {
     font-size: xx-large;
+  }
+  footer .footer-links p {
+    text-align: center;
   }
 }
